--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,11 @@
         "guzzlehttp/guzzle": "^7.0|^6.1"
     },
     "require-dev": {
-        "phpstan/phpdoc-parser": "^1.24.5",
         "keboola/coding-standard": "^15.0",
         "keboola/phpunit-retry-annotations": "^0.3.0",
+        "keboola/retry": "^0.5.1",
         "keboola/storage-api-client": "^17.0",
+        "phpstan/phpdoc-parser": "^1.24.5",
         "phpstan/phpstan": "^1.10",
         "phpstan/phpstan-phpunit": "^1",
         "phpunit/phpunit": "^7.0|^8.0"
