--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "phpstan/phpdoc-parser": "^1.24.5",
         "phpstan/phpstan": "^1.10",
         "phpstan/phpstan-phpunit": "^1",
-        "phpunit/phpunit": "^7.0|^8.0"
+        "phpunit/phpunit": "^7.0|^8.0",
+        "tomasfejfar/phpstan-phpunit": "^0.1.0"
     },
     "autoload": {
         "psr-4": {
