--- a/phpstan.neon
+++ b/phpstan.neon
@@ -15,3 +15,6 @@ parameters:
 includes:
     - phpstan-baseline.neon
     - vendor/phpstan/phpstan-phpunit/extension.neon
+
+rules:
+    - Tomasfejfar\PhpstanPhpunit\Rule\FailInTryCatchRule
