Add new unverified user to test

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,7 @@ services:
       - KBC_TEST_ADMIN_TOKEN
       - KBC_TEST_ADMIN_WITH_MFA_EMAIL
       - KBC_TEST_ADMIN_WITH_MFA_TOKEN
+      - KBC_TEST_UNVERIFIED_ADMIN_TOKEN
       - TEST_ABS_ACCOUNT_KEY
       - TEST_ABS_REGION
       - TEST_ABS_ACCOUNT_NAME
