include tests to phpunitxml

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -39,6 +39,7 @@
             <exclude>tests/OrganizationsMetadataTest.php</exclude>
             <exclude>tests/OrganizationsTest.php</exclude>
             <exclude>tests/BigqueryProjectsTest.php</exclude>
+            <exclude>tests/StorageBackendBigqueryTest.php</exclude>
         </testsuite>
         <testsuite name="File Storage">
             <file>tests/FileStorageAbsTest.php</file>
@@ -77,6 +78,7 @@
             <file>tests/OrganizationsMetadataTest.php</file>
             <file>tests/OrganizationsTest.php</file>
             <file>tests/BigqueryProjectsTest.php</file>
+            <file>tests/StorageBackendBigqueryTest.php</file>
         </testsuite>
     </testsuites>
     <filter>
