--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "keboola/phpunit-retry-annotations": "^0.3.0",
         "keboola/retry": "^0.5.1",
         "keboola/storage-api-client": "^17.0",
+        "keboola/table-backend-utils": "^2.11",
         "phpstan/phpdoc-parser": "^1.24.5",
         "phpstan/phpstan": "^1.10",
         "phpstan/phpstan-phpunit": "^1",
