tests and setup for tests

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,6 +49,11 @@ services:
       - KBC_TEST_SNOWFLAKE_BACKEND_REGION
       - KBC_TEST_SNOWFLAKE_BACKEND_NAME
       - KBC_TEST_SNOWFLAKE_BACKEND_PASSWORD
+      - KBC_TEST_MAIN_SNOWFLAKE_BACKEND_NAME
+      - KBC_TEST_MAIN_SNOWFLAKE_BACKEND_PRIVATE_KEY
+      - KBC_TEST_MAIN_SNOWFLAKE_BACKEND_DATABASE
+      - KBC_TEST_MAIN_SNOWFLAKE_BACKEND_WAREHOUSE
+      - KBC_TEST_SNOWFLAKE_BACKEND_CLIENT_DB_PREFIX
 
   dev-xdebug:
     <<: *dev-config
