--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "phpstan/phpdoc-parser": "^1.24.5",
         "phpstan/phpstan": "^2",
         "phpstan/phpstan-phpunit": "^2",
-        "phpunit/phpunit": "^7.0|^8.0",
+        "phpunit/phpunit": "^9",
         "rector/rector": "^2.2",
         "tomasfejfar/phpstan-phpunit": "^0.2.0"
     },
