--- a/composer.json
+++ b/composer.json
@@ -4,19 +4,15 @@
     "license": "MIT",
     "require": {
         "php" : ">=8.2",
-        "guzzlehttp/guzzle": "^7.0|^6.1"
+        "guzzlehttp/guzzle": "~7.0"
     },
     "require-dev": {
-        "keboola/coding-standard": "^16.0",
-        "keboola/retry": "^0.5.1",
+        "keboola/coding-standard": "^15.0",
+        "keboola/retry": "^0.5.0",
         "keboola/storage-api-client": "^18",
-        "keboola/table-backend-utils": "^2.11",
+        "keboola/table-backend-utils": ">=2.9.0",
         "phpstan/phpdoc-parser": "^1.24.5",
-        "phpstan/phpstan": "^2",
-        "phpstan/phpstan-phpunit": "^2",
-        "phpunit/phpunit": "^12",
-        "rector/rector": "^2.2",
-        "tomasfejfar/phpstan-phpunit": "^0.2.0"
+        "phpstan/phpstan": "^1"
     },
     "autoload": {
         "psr-4": {
