--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,8 @@
     },
     "require-dev": {
         "keboola/coding-standard": "^15.0",
-        "keboola/retry": "^0.5.0",
         "keboola/storage-api-client": "^18",
-        "keboola/table-backend-utils": ">=2.9.0",
-        "phpstan/phpdoc-parser": "^1.24.5",
-        "phpstan/phpstan": "^1"
+        "keboola/table-backend-utils": ">=2.9.0"
     },
     "autoload": {
         "psr-4": {
@@ -20,14 +17,7 @@
         }
     },
     "scripts": {
-        "ci": [
-            "@phpcs",
-            "@phpstan"
-        ],
-        "phpcs": "phpcs -s -n -p --extensions=php src",
-        "phpcbf": "phpcbf -s -n -p --extensions=php src",
-        "phpstan": "phpstan analyse ./src -c phpstan.neon",
-        "rector": "rector"
+        "ci": []
     },
     "authors": [
         {
